--- a/动态折线图/index.html
+++ b/动态折线图/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>动态折线图</title>
 </head>
 <body>
-    <svg width="1650" height="920" id="mainsvg" class="svgs" style="background-color: #ffffff;"></svg>
+    <svg width="1600" height="800" id="mainsvg"></svg>
     <script src="http://d3js.org/d3.v4.min.js"></script>
     <script src="./chart.js"> 
     </script>
