动态折线图

--- a/动态折线图/index.html
+++ b/动态折线图/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>动态折线图</title>
+    <title>Document</title>
 </head>
 <body>
     <svg width="1600" height="800" id="mainsvg"></svg>
