--- a/堆叠图stack/stackbarchart-simple.html
+++ b/堆叠图stack/stackbarchart-simple.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <title>StackBarChart</title>
-    <script src="../js/d3.min.js"></script>
+    <script src="../js/d3.minv5.js"></script>
     <script src="../js/axes.js"></script>
-    <script src="../js/library/moment.min.js"></script>
+    <script src="../js/moment.min.js"></script>
   </head>
   <body>
     <svg width="1600" height="800" id="mainsvg" class="svgs"></svg>
